--- a/website/slides/raw_slides/slides_13.qmd
+++ b/website/slides/raw_slides/slides_13.qmd
@@ -292,11 +292,20 @@ cat("Semi-final winners:", sf_winners, "\n")
 
 
 ## Finals Simulation{.smaller}
+
+
+
+:::{.panel-tabset}
+
+### Set-up
+
+- Extract semi-final winners
+- Get matchup probability for finals
+
 ```{r}
-#| label: simulate-finals
+#| label: build-finals
 #| eval: true
 #| echo: true
-
 finals <- 
   data.frame(Team1 = sf_winners[1], Team2 = sf_winners[2]) |>
   dplyr::left_join(y = seeds |> dplyr::rename(Team1 = Team, Team1.Seed = Seed), by = "Team1") |>
@@ -307,6 +316,17 @@ finals <-
   dplyr::select(Hi, Lo) |> 
   dplyr::left_join(
     y = possible_matchups |> dplyr::select(Hi, Lo, prob), by = c("Hi", "Lo"))
+
+finals
+```
+
+### Simulate Finals
+```{r}
+#| label: simulate-finals
+#| eval: true
+#| echo: true
+
+
 
 final_outcome <- rbinom(n = 1, size = 1, prob = finals$prob)
 if(final_outcome == 1){
@@ -319,6 +339,8 @@ cat("Finals outcome:", final_outcome, "\n")
 cat("Finals winner:", final_winner, "\n")
 
 ```
+:::
+
 
 ## Repeated Simulations {.smaller}
 
